src/test/resources/compilation_error/invalid_list_literal_error_2.funcky
foo = bar
buz = ["funcky:booleans".false, "a"]
